# aenzbi-backend

./: .replit  README.md  api.py  automated_file.txt  export-csv.js  export-pdf.js  firebase.json  import-csv.js  jwt.py  package-lock.json  package.json  pyproject.toml  replit.nix  server.js
.firebase/: hosting.c2VydmVyLmFlbnpiaS5iaQ.cache
.github/workflows/: jekyll-gh-pages.yml  main.yml  neon_workflows.yml
server.aenzbi.bi/: .firebaserc  .replit  README.md  firebase.json  firestore.rules  index.html  index.js  package-lock.json  package.json  server.js
server.aenzbi.bi/aenzbi/: package-lock.json  package.json
server.aenzbi.bi/functions/: index.js  package-lock.json  package.json
server.aenzbi.bi/functions/modules/accounting/: accounting.controller.js  accounting.routes.js
server.aenzbi.bi/functions/modules/auth/: auth.controller.js  auth.routes.js
server.aenzbi.bi/functions/modules/hotel/: hotel.controller.js  hotel.routes.js
server.aenzbi.bi/functions/modules/payment/: payment.controller.js  payment.routes.js
server.aenzbi.bi/functions/modules/product/: product.controller.js  product.routes.js
server.aenzbi.bi/functions/modules/property/: property.controller.js  property.routes.js
server.aenzbi.bi/functions/modules/report/: report.controller.js  report.routes.js
server.aenzbi.bi/functions/modules/restaurant/: restaurant.controller.js  restaurant.routes.js
server.aenzbi.bi/functions/modules/sales/: sales.controller.js  sales.routes.js
server.aenzbi.bi/functions/modules/stock/: stock.routes.js  (+1 more)
server.aenzbi.bi/public/: index.html  index.js
(+4 files in other folders)
