[tool.poetry]
name = "repl-nix-aenzbi-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_aenzbi_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.3"
requests = "^2.32.3"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
